<resources>
    <string name="app_name">UserAuthApp</string>
    <string name="logo">Logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="str_sign_up_set_up">Sign up and setup your account</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nigerian_flag">Nigerian flag</string>
    <string name="_234">+234</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset">RESET</string>
    <string name="back_to">Back to </string>
    <string name="login_small">" login"</string>
    <string name="sign_in">" Sign In"</string>
    <string name="selected_item">Selected item:</string>
    <string name="capture">Capture</string>
    <string name="choose">Choose</string>
    <string name="our_image">Our Image</string>
    <string name="str_continue">CONTINUE</string>
    <string name="cancel">CANCEL</string>

    <string-array name="country_codes">
        <item>NIG: +234</item>
        <item>BEN: +229</item>
        <item>BFA: +226</item>
        <item>CPV: +238</item>
        <item>CIV: +225</item>
        <item>GAM: +220</item>
        <item>GHA: +233</item>
        <item>GUI: +224</item>
        <item>GNB: +245</item>
        <item>LIB: +231</item>
        <item>MAL: +223</item>
        <item>MAU: +222</item>
        <item>NIR: +227</item>
        <item>SEN: +221</item>
        <item>SLE: +232</item>
        <item>TOG: +228</item>
    </string-array>

</resources>