<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/img_logo"
        app:tint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/darkish_blue"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv_signup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_forgot_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>