<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center|top"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/our_image"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:padding="5dp"
            android:text="@string/capture"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/purple_500"
            android:id="@+id/btnCapture"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:padding="5dp"
            android:text="@string/choose"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/purple_500"
            android:id="@+id/btnChoose"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/darkish_blue"
        android:text="@string/create_account"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center">

        <TextView
            android:id="@+id/cancel_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:textColor="@color/darkish_blue"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>